--- a/GraphicalProgrammingLanguage.csproj
+++ b/GraphicalProgrammingLanguage.csproj
@@ -50,9 +50,7 @@
     <Compile Include="Circle.cs" />
     <Compile Include="Creator.cs" />
     <Compile Include="FactoryClass.cs" />
-    <Compile Include="Form1.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="Form1.cs" />
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
